Reified works completely for methods. TODO:   Add local variable to classes to complete support   Support multiple type variables based on index