@@ -15,24 +15,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>9.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.7</version>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -65,6 +57,7 @@
                         <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.api=it.auties.reified</arg>
                         <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.comp=it.auties.reified</arg>
                         <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.jvm=it.auties.reified</arg>
+                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.processing=it.auties.reified</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
